see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Dec-2010 Christophe Demko
 # [#22725] Update Manager Fails (Dennis Hermacki)
 # [#23700] Lang switcher is redirecting users to home page depending of languages when lang filter is off + SEF plugin is doing some work when SEF is OFF
 # [#23702] Javascript out of sync between normal and uncompressed file (Rouven Weßling)

09-Dec-2010 Jean-Marie Simonet
[#23671] some Chinese glyphs break SEF when using unicode urls. Thanks Mark.

08-Dec-2010 Jean-Marie Simonet
 # [#23677] RTL header issue in Bluestork. Thanks Andrea.

08-Dec-2010 Mark Dexter
# [#21207] Joomla 1.6 Beta 6 - not assigned to groups when via LDAP login. (Elin Waring)
# [#23441] *Fatal error when saving a weblink from the new icon in a weblink category list
# [#22992] Unpublished articles are still shown in user profile
# [#22958] CSS class and id changes (cont'd) (Andrea Tarr)
# [#22955] Upgrading plugin using method="upgrade" does not remove files omitted from xml (Sam Moffatt)

07-Dec-2010 Mark Dexter
# [#22957] Upgrading a template that uses method="upgrade" removes manually added files
# [#22682] Users without edit state can change date on screen via the calendar
# [#23366] Remove special treatment for Konqueror with regard to minified javascript (Rouven Weßling)

07-Dec-2010 Jean-Marie Simonet
 [#23666] Attempting to log in with a non-existent account get's "Username and password do not match" message. Thanks Matt and Bill.

07-Dec-2010 Christophe Demko
 + Adding an index.html file
 # [#23663] Some modules does not load the jmodel class before using it
 # [#23639] JFormValidator and disabled Elements (Reinhard Hiebl)